force-app/main/default/objects/Campaign__c/Campaign__c.object-meta.xml
<CustomObject>
    <description>Campaign master data for attribution analysis. Contains campaign metadata, performance metrics, and attribution context.</description>
    <label>Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>