force-app/main/default/objects/Campaign__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Target customer type for this campaign</description>
    <label>Customer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>