force-app/main/default/objects/Campaign__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Campaign end date</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>