force-app/main/default/objects/Campaign__c/fields/ID_External__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_External__c</fullName>
    <description>External campaign identifier from source platforms</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique campaign identifier from the originating platform (Google Ads, Facebook, etc.)</inlineHelpText>
    <label>Campaign ID External</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>