force-app/main/default/objects/Campaign__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Quarter__c</fullName>
    <description>Campaign quarter (Q1, Q2, Q3, Q4)</description>
    <label>Campaign Quarter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>