force-app/main/default/objects/Campaign__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Campaign start date</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>